--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,108 +2,62 @@ name: flutter_cryptowatch
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+# App Versioning
 version: 1.0.0+1
 
 environment:
   sdk: ^3.9.2
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
+  # --------------------------------------------------------------------------
+  # 1. Framework/Core Dependencies
+  # --------------------------------------------------------------------------
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  dio: ^5.9.0
-  json_annotation: ^4.9.0
-  floor: ^1.5.0
-  sqflite: ^2.4.2
-  get_it: ^9.2.0
-  injectable: ^2.7.1+2
-  workmanager: ^0.9.0+3
-  connectivity_plus: ^7.0.0
-  flutter_bloc: ^9.1.1
-  equatable: ^2.0.7
-  infinite_scroll_pagination: ^5.1.1
-  cached_network_image: ^3.4.1
-  intl: ^0.20.2
-  go_router: ^17.0.1
-  stream_transform: ^2.1.1
-  logger: ^2.6.2
+  # UI/UX & Routing
+  cached_network_image: ^3.4.1 # For loading network images efficiently
+  cupertino_icons: ^1.0.8     # For iOS style icons
+  go_router: ^17.0.1          # Declarative routing and deep linking
+  infinite_scroll_pagination: ^5.1.1 # For infinite scrolling listviews
+
+  # State Management (BLoC Pattern)
+  equatable: ^2.0.7           # For comparing objects in BLoC events/states
+  flutter_bloc: ^9.1.1        # Integration of BLoC pattern with Flutter
+  stream_transform: ^2.1.1    # For reactive operations like debouncing search
+
+  # Data & Persistence Layer
+  connectivity_plus: ^7.0.0   # To check internet connectivity status
+  dio: ^5.9.0                 # Powerful HTTP client
+  floor: ^1.5.0               # Persistence library using SQLite/Room
+  json_annotation: ^4.9.0     # Annotations for JSON serialization
+  sqflite: ^2.4.2             # Low-level SQLite plugin for Floor
+  
+  # Dependency Injection & Utilities
+  get_it: ^9.2.0              # Simple Service Locator for DI
+  injectable: ^2.7.1+2        # Code generation for GetIt
+  intl: ^0.20.2               # Internationalization and date/number formatting
+  logger: ^2.6.2              # Logging utility
+  workmanager: ^0.9.0+3       # For background tasks (e.g., syncing)
 
 dev_dependencies:
+  # --------------------------------------------------------------------------
+  # 2. Development/Build Dependencies (Code Generation, Linting, Testing)
+  # --------------------------------------------------------------------------
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
-  build_runner: ^2.4.13
-  json_serializable: ^6.8.0
-  floor_generator: ^1.5.0
-  injectable_generator: ^2.6.2
+  # Code Generation
+  build_runner: ^2.4.13       # Standard build tool for Dart code generation
+  floor_generator: ^1.5.0     # Generates Floor database code
+  injectable_generator: ^2.6.2 # Generates dependency injection code (GetIt)
+  json_serializable: ^6.8.0   # Generates JSON serialization code
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  # Linting
+  flutter_lints: ^5.0.0    
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
